kubernetes/apps/external-secrets/external-secrets/stores/onepassword/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: onepassword-connect
  namespace: external-secrets
  annotations:
    external-dns.alpha.kubernetes.io/target: "traefik-int.ironstone.casa"
spec:
  hostnames:
    - onepassword-connect.ironstone.casa
  parentRefs:
    - name: traefik-internal
      namespace: network
      sectionName: websecure
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: onepassword-connect
          port: 80
